--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
     "axios": "^1.7.8",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "chart.js": "^4.4.7",
+    "react-chartjs-2": "^5.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
